<resources>
    <string name="app_name">CleanSweep</string>
    <string name="title_activity_homepage">homepage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="logout">Logout</string>
    <string name="feedback">Feedback</string>
    <string name="contributer">Contributer</string>
    <string name="about_us">About Us</string>
    <string name="developers">Developers</string>
    <string name="achievements">Achievements</string>
    <string name="host_join_social_network">Host/Join Social Network</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="current_points">Current Points</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="host_social_event">HOST SOCIAL EVENT</string>
</resources>
